added required fields and sanitization checks for them, udapted api spec with future register endpoints that are nice to have
